--- a/html/community/community.html
+++ b/html/community/community.html
@@ -94,7 +94,7 @@
           <div id="DIV-POST-LIST-WRAP">
 
             <!-- 글 1개 -->
-            <div class="div-one-post-wrap post-hover" onclick="location.href='community_view.html'">
+            <div class="div-one-post-wrap post-hover" onclick="location.href='community-view.html'">
               <div class="div-post-info-wrap">
                 <div class="div-profile-post-wrap">
                   <div class="div-profile-wrap">
