--- a/html/main.html
+++ b/html/main.html
@@ -71,7 +71,7 @@
       <div class="div-rank-wrap">
 
         <!-- 팔로워 1명 -->
-        <div class="div-rank-layout div-rank-follower-wrap post-hover">
+        <div class="div-rank-layout div-rank-follower-wrap post-hover" onclick="location.href='userPage/userPage.html'">
           <div class="div-profile-image"><img src="../image/example/profile_image/profile1.jpg" alt="profile"></div>
           <div class="div-nickname">조용한오후</div>
           <button class="button-style follow-btn" onclick="goFollow(event, this, 0)">팔로우</button>
@@ -93,7 +93,7 @@
         <!--  -->
 
         <!--  -->
-        <div class="div-rank-layout div-rank-follower-wrap post-hover">
+        <div class="div-rank-layout div-rank-follower-wrap post-hover" onclick="location.href='userPage/userPage.html'">
           <div class="div-profile-image"><img src="../image/example/profile_image/profile2.jpg" alt="profile"></div>
           <div class="div-nickname">작은식탁일기</div>
           <button class="button-style follow-btn" onclick="goFollow(event, this, 1)">팔로우</button>
