--- a/html/notice/notice.html
+++ b/html/notice/notice.html
@@ -66,7 +66,7 @@
           <div id="DIV-POST-LIST-WRAP">
 
             <!-- 글 1개 -->
-            <div class="div-one-post-wrap post-hover" onclick="location.href='notice_view.html'">
+            <div class="div-one-post-wrap post-hover" onclick="location.href='notice-view.html'">
               <div class="div-post-info-wrap">
                 <div class="div-profile-post-wrap">
                   <div class="div-profile-wrap">
@@ -84,7 +84,7 @@
             <!--   -->
             
             <!--  -->
-            <div class="div-one-post-wrap post-hover" onclick="location.href='notice_view.html'">
+            <div class="div-one-post-wrap post-hover" onclick="location.href='notice-view.html'">
               <div class="div-post-info-wrap">
                 <div class="div-profile-post-wrap">
                   <div class="div-profile-wrap">
@@ -99,7 +99,7 @@
                 </div>
               </div>
             </div>
-            <div class="div-one-post-wrap post-hover" onclick="location.href='notice_view.html'">
+            <div class="div-one-post-wrap post-hover" onclick="location.href='notice-view.html'">
               <div class="div-post-info-wrap">
                 <div class="div-profile-post-wrap">
                   <div class="div-profile-wrap">
