EDIT : 20250705 사용자 관리 상세페이지 완료

--- a/html/admin/admin-user-view.html
+++ b/html/admin/admin-user-view.html
@@ -10,6 +10,7 @@
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script defer src="../../js/admin/admin-basic.js"></script>
   <script defer src="../../js/admin/admin-user.js"></script>
+  <script defer src="../../js/admin/admin-comment.js"></script>
 </head>
 <body>
   
@@ -291,7 +292,7 @@
         </div>
       </div>
       <div class="div-alert-btn-wrap">
-        <div class="button-style btn-full-blue delete-comment" data-comment="2">댓글 삭제</div>
+        <div class="button-style btn-full-blue delete-comment" data-comment="2" data-parent="3">댓글 삭제</div>
       </div>
     </div>
   </div> -->
