--- a/html/admin/admin-banner-list.html
+++ b/html/admin/admin-banner-list.html
@@ -107,7 +107,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="go-page go-detail" data-banner="2">
+          <tr class="go-page view-banner" data-banner="2">
             <td>5</td>
             <td>서비스 점검 일정 안내</td>
             <td>운영자</td>
@@ -119,7 +119,7 @@
               <div class="div-menu-btn"><img src="../../image/layout/menu_btn.png"></div>
             </td>
           </tr>
-          <tr class="go-page go-detail" data-banner="2">
+          <tr class="go-page view-banner" data-banner="2">
             <td>3</td>
             <td>오늘의 공간, 오늘의 이야기</td>
             <td>운영자</td>
@@ -128,13 +128,9 @@
             <td>2025.06.19</td>
             <td class="td-menu_btn">
               <div class="div-menu-btn"><img src="../../image/layout/menu_btn.png"></div>
-              <!-- <div class="div-menu-wrap">
-                <div class="div-menu-option">수정</div>
-                <div class="div-menu-option">삭제</div>
-              </div> -->
             </td>
           </tr>
-          <tr class="go-page go-detail" data-banner="2">
+          <tr class="go-page view-banner" data-banner="2">
             <td>2</td>
             <td>업데이트 안내드립니다</td>
             <td>운영자</td>
@@ -145,7 +141,7 @@
               <div class="div-menu-btn"><img src="../../image/layout/menu_btn.png"></div>
             </td>
           </tr>
-          <tr class="go-page go-detail" data-banner="2">
+          <tr class="go-page view-banner" data-banner="2">
             <td>1</td>
             <td>RoomLOG가 더 편해졌어요</td>
             <td>운영자</td>
