EDIT : 20250706 관리자 배너 관리 목록 페이지 일부 수정

--- a/html/admin/admin-banner-list.html
+++ b/html/admin/admin-banner-list.html
@@ -155,6 +155,10 @@
         </tbody>
       </table>
       
+      <div id="DIV-BTN-WRITE-GROUP">
+        <div class="button-style btn-full-blue">글 남기기</div>
+      </div>
+      
       <!-- 페이지네이션 -->
       <div id="DIV-PAGENATION-WRAP">
         <div class="div-page-btn-wrap">
