EDIT : 20250706 관리자 배너 등록 페이지 완료

--- a/html/admin/admin-banner-list.html
+++ b/html/admin/admin-banner-list.html
@@ -156,7 +156,7 @@
       </table>
       
       <div id="DIV-BTN-WRITE-GROUP">
-        <div class="button-style btn-full-blue">글 남기기</div>
+        <div class="button-style btn-full-blue" onclick="location.href='admin-banner-write.html'">글 남기기</div>
       </div>
       
       <!-- 페이지네이션 -->
