--- a/html/notice/notice.html
+++ b/html/notice/notice.html
@@ -124,7 +124,7 @@
         </div>
 
         <div id="DIV-WRITE-WRAP">
-          <div class="button-style div-write-btn">글 남기기</div>
+          <div class="button-style div-write-btn" onclick="location.href='../admin/admin-banner-write.html'">글 남기기</div>
         </div>
         
         <!-- 페이지네이션 -->
