EDIT : 20250731 로그인 세부 조정 및 대댓글 더보기 버튼 추가

--- a/html/community/community-view.html
+++ b/html/community/community-view.html
@@ -242,6 +242,8 @@
           </div>
         </div>
         <!--  -->
+        <!-- 대댓글 더보기 버튼 -->
+        <div class="div-more-btn-wrap">더보기<span class="span-plus">&plus;</span></div>
 
         
         <div class="div-comment-wrap div-parent-comment">
